--- a/ZooBazaar-SAIA-Desktop/Menu.resx
+++ b/ZooBazaar-SAIA-Desktop/Menu.resx
@@ -57,4 +57,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnStatistics.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAt0AAABkCAYAAABabYxmAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAALiIAAC4iAari3ZIAAAYXSURBVHhe7d3Pq61VHcdxCyRDixAjhAznFTUJGlTSoIlS
+        0jQSadC0QU6qUTaSmjiQfuHAyKFiJU4swz9AyIQKxaC4pmWkJViGxvX7hfPAPpt17n6+ez+7s551Xh94
+        TdY5a3PvXZM3B+69V12+fBkAADii5iEAALCc5iEAAOsx0K4LT4UXwqU9/SV8LpzLWu+TmocAAKzHQHtv
+        +HvI39Qhbg/nstb7pOYhAADrMdAyuvMn1ZsBvY/Ph3NZ631S8xAAgPUYaNvR/Up4YoY/hOlOEt0AACxr
+        oG1H9y/DnN0ZpjtJdAMAsKyBth3d+VPsOftqmO4k0Q0AwLIGmugGAKBPA010AwDQp4EmugEA6NNAE90A
+        APRpoIluAAD6NNBENwAAfRpoohsAgD4NNNENAECfBproBgCgTwNtO7ofD3N2R5juJNENAMCyBtp2dP82
+        ZEB/4QpuC/eF6U4S3QAALGugbUf3vkQ3AADLGmiiGwCAPg000Q0AQJ8GmugGAKBPA010AwDQp4EmugEA
+        6NNAE90AAPRpoIluAAD6NNBENwAAfRpoohsAgD4NNNENAECfBproBgCgTwNNdAMA0KeBJroBAOjTQBPd
+        AAD0aaCJbgAA+jTQRDcAAH0q7gPhKwf6YnhHWHqiGwCAPhV3S9gM1H38ObwzLD3RDQBAn4r7VNgM1H38
+        Pojuxlrvk5qHAACsR3Gi+4hrvU9qHgIAsB7FbUf3j8KnZ/hjmO6I7jPWep/UPAQAYD2K247uu8KcPR2m
+        O6L7jLXeJzUPAQBYj+K2o/ubYc6eCdMd0X3GWu+TmocAAKxHcRcpuq8OHzzQjWH2P4/Yep/UPAQAYD2K
+        u0jR/dHw2oGeDdeGWWu9T2oeAgCwHsVdpOj+eGh9veKv4bowa633Sc1DAADWo7iLFN0fC62vV7wQRDcA
+        wEVX3EWO7t+E74cfXsEPwothuiO6AQDILiztIkf3d8KcPRGmO6IbAIDswtIucnTfE+bsyTDdEd0AAGQX
+        lia6d090AwBwWnHb0f2NMGeie8Za75OahwAArEdx29H9rZD/+UtG9JWI7hlrvU9qHgIAsB7FbUf3SyH/
+        VY+nd/hPmO6I7jPWep/UPAQAYD2K247ufYjuM9Z6n9Q8BABgPYoT3bsnugEAOK040b17ohsAgNOKE927
+        J7oBADitONG9e6IbAIDTils6uq8J7znQu0Pu2NF9d5izX4XpjugGACC7sLSlo/t7IcP00p7y7v0hlwF+
+        zOj+dfh6uGuH58N0R3QDAJBdWNrS0f1AaH1PxaMhd+zo3ofoBgAgu7C0paM7f0rd+p6KR0JOdAMA0Kfi
+        jhndb4WfhQd3eCi8EaZ7ohsAgL4Vd8zo/nd4f9i1/IuTfwvTPdENAEDfijt2dN8cdu2G8HKY7oluAAD6
+        VpzorhHdAABkF5YmumtENwAA2YWlie4a0Q0AQHZhaaK7RnQDAJBdWJrorhHdAABkF5YmumtENwAA2YWl
+        ie4a0Q0AQHZhaaK7RnQDAJBdWJrorhHdAABkF5Z2zOh+PVwfdu3q4L+BBwBgPYo7ZnS/Ge4N397huyED
+        fbonugEA6Ftxx4zufYluAAD6VpzorhHdAABkF5YmumtENwAA2YWlie4a0Q0AQHZhaaK7RnQDAJBdWJro
+        rhHdAABkF5YmumtENwAA2YWlie4a0Q0AQHZhaaK7RnQDAJBdWJrorhHdAABkF5YmumtENwAA2YWlie4a
+        0Q0AQHZhaaK7RnQDAJBdWNonw2ZU7uN3YdqPQ+t7Kh4OuWvCEtF9a8h9OLS+XnEpvCvMWut9UvMQAID1
+        2Nj7wvU7ZJBuRuU+ng03hPy8n56cHeKxkJ/1ofDSydkhvhTy8z6zcbavF8NNYfrzO8u1ofk+qXkIAMB6
+        xPInsQ+El8M/dvhX2IzKfbwVps974+TsEP8N+VmvhP+dnB3itZCf98+Ns33lryd/XdPv9yx/Cl9rvU9q
+        HgIAsB6xz4bNUOR8vNp6n9Q8BABgPWIf2Qg/zs9zrfdJzUMAANbjZF8OD4VfhJ/zf/Vo+En4ROt9UvMQ
+        AABYTvMQAABYTvMQAABYTvMQAABYyuWr3gbGh6wLba95AgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
