Ticket functionality implemented

--- a/ZooBazaar-SAIA-Desktop/Menu.resx
+++ b/ZooBazaar-SAIA-Desktop/Menu.resx
@@ -60,34 +60,66 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnStatistics.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAt0AAABkCAYAAABabYxmAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAALiIAAC4iAari3ZIAAAYXSURBVHhe7d3Pq61VHcdxCyRDixAjhAznFTUJGlTSoIlS
-        0jQSadC0QU6qUTaSmjiQfuHAyKFiJU4swz9AyIQKxaC4pmWkJViGxvX7hfPAPpt17n6+ez+7s551Xh94
-        TdY5a3PvXZM3B+69V12+fBkAADii5iEAALCc5iEAAOsx0K4LT4UXwqU9/SV8LpzLWu+TmocAAKzHQHtv
-        +HvI39Qhbg/nstb7pOYhAADrMdAyuvMn1ZsBvY/Ph3NZ631S8xAAgPUYaNvR/Up4YoY/hOlOEt0AACxr
-        oG1H9y/DnN0ZpjtJdAMAsKyBth3d+VPsOftqmO4k0Q0AwLIGmugGAKBPA010AwDQp4EmugEA6NNAE90A
-        APRpoIluAAD6NNBENwAAfRpoohsAgD4NNNENAECfBproBgCgTwNtO7ofD3N2R5juJNENAMCyBtp2dP82
-        ZEB/4QpuC/eF6U4S3QAALGugbUf3vkQ3AADLGmiiGwCAPg000Q0AQJ8GmugGAKBPA010AwDQp4EmugEA
-        6NNAE90AAPRpoIluAAD6NNBENwAAfRpoohsAgD4NNNENAECfBproBgCgTwNNdAMA0KeBJroBAOjTQBPd
-        AAD0aaCJbgAA+jTQRDcAAH0q7gPhKwf6YnhHWHqiGwCAPhV3S9gM1H38ObwzLD3RDQBAn4r7VNgM1H38
-        Pojuxlrvk5qHAACsR3Gi+4hrvU9qHgIAsB7FbUf3j8KnZ/hjmO6I7jPWep/UPAQAYD2K247uu8KcPR2m
-        O6L7jLXeJzUPAQBYj+K2o/ubYc6eCdMd0X3GWu+TmocAAKxHcRcpuq8OHzzQjWH2P4/Yep/UPAQAYD2K
-        u0jR/dHw2oGeDdeGWWu9T2oeAgCwHsVdpOj+eGh9veKv4bowa633Sc1DAADWo7iLFN0fC62vV7wQRDcA
-        wEVX3EWO7t+E74cfXsEPwothuiO6AQDILiztIkf3d8KcPRGmO6IbAIDswtIucnTfE+bsyTDdEd0AAGQX
-        lia6d090AwBwWnHb0f2NMGeie8Za75OahwAArEdx29H9rZD/+UtG9JWI7hlrvU9qHgIAsB7FbUf3SyH/
-        VY+nd/hPmO6I7jPWep/UPAQAYD2K247ufYjuM9Z6n9Q8BABgPYoT3bsnugEAOK040b17ohsAgNOKE927
-        J7oBADitONG9e6IbAIDTils6uq8J7znQu0Pu2NF9d5izX4XpjugGACC7sLSlo/t7IcP00p7y7v0hlwF+
-        zOj+dfh6uGuH58N0R3QDAJBdWNrS0f1AaH1PxaMhd+zo3ofoBgAgu7C0paM7f0rd+p6KR0JOdAMA0Kfi
-        jhndb4WfhQd3eCi8EaZ7ohsAgL4Vd8zo/nd4f9i1/IuTfwvTPdENAEDfijt2dN8cdu2G8HKY7oluAAD6
-        VpzorhHdAABkF5YmumtENwAA2YWlie4a0Q0AQHZhaaK7RnQDAJBdWJrorhHdAABkF5YmumtENwAA2YWl
-        ie4a0Q0AQHZhaaK7RnQDAJBdWJrorhHdAABkF5Z2zOh+PVwfdu3q4L+BBwBgPYo7ZnS/Ge4N397huyED
-        fbonugEA6Ftxx4zufYluAAD6VpzorhHdAABkF5YmumtENwAA2YWlie4a0Q0AQHZhaaK7RnQDAJBdWJro
-        rhHdAABkF5YmumtENwAA2YWlie4a0Q0AQHZhaaK7RnQDAJBdWJrorhHdAABkF5YmumtENwAA2YWlie4a
-        0Q0AQHZhaaK7RnQDAJBdWNonw2ZU7uN3YdqPQ+t7Kh4OuWvCEtF9a8h9OLS+XnEpvCvMWut9UvMQAID1
-        2Nj7wvU7ZJBuRuU+ng03hPy8n56cHeKxkJ/1ofDSydkhvhTy8z6zcbavF8NNYfrzO8u1ofk+qXkIAMB6
-        xPInsQ+El8M/dvhX2IzKfbwVps974+TsEP8N+VmvhP+dnB3itZCf98+Ns33lryd/XdPv9yx/Cl9rvU9q
-        HgIAsB6xz4bNUOR8vNp6n9Q8BABgPWIf2Qg/zs9zrfdJzUMAANbjZF8OD4VfhJ/zf/Vo+En4ROt9UvMQ
-        AABYTvMQAABYTvMQAABYTvMQAABYyuWr3gbGh6wLba95AgAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAt0AAABkCAYAAABabYxmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
+        IgAALiIBquLdkgAABhdJREFUeF7t3c+rrVUdx3ELJEOLECOEDOcVNQkaVNKgiVLSNBJp0LRBTqpRNpKa
+        OJB+4cDIoWIlTizDP0DIhArFoLimZaQlWIbG9fuF88A+m3Xufr57P7uznnVeH3hN1jlrc+9dkzcH7r1X
+        Xb58GQAAOKLmIQAAsJzmIQAA6zHQrgtPhRfCpT39JXwunMta75OahwAArMdAe2/4e8jf1CFuD+ey1vuk
+        5iEAAOsx0DK68yfVmwG9j8+Hc1nrfVLzEACA9Rho29H9Snhihj+E6U4S3QAALGugbUf3L8Oc3RmmO0l0
+        AwCwrIG2Hd35U+w5+2qY7iTRDQDAsgaa6AYAoE8DTXQDANCngSa6AQDo00AT3QAA9GmgiW4AAPo00EQ3
+        AAB9GmiiGwCAPg000Q0AQJ8GmugGAKBPA207uh8Pc3ZHmO4k0Q0AwLIG2nZ0/zZkQH/hCm4L94XpThLd
+        AAAsa6BtR/e+RDcAAMsaaKIbAIA+DTTRDQBAnwaa6AYAoE8DTXQDANCngSa6AQDo00AT3QAA9GmgiW4A
+        APo00EQ3AAB9GmiiGwCAPg000Q0AQJ8GmugGAKBPA010AwDQp4EmugEA6NNAE90AAPRpoIluAAD6NNBE
+        NwAAfSruA+ErB/pieEdYeqIbAIA+FXdL2AzUffw5vDMsPdENAECfivtU2AzUffw+iO7GWu+TmocAAKxH
+        caL7iGu9T2oeAgCwHsVtR/ePwqdn+GOY7ojuM9Z6n9Q8BABgPYrbju67wpw9HaY7ovuMtd4nNQ8BAFiP
+        4raj+5thzp4J0x3RfcZa75OahwAArEdxFym6rw4fPNCNYfY/j9h6n9Q8BABgPYq7SNH90fDagZ4N14ZZ
+        a71Pah4CALAexV2k6P54aH294q/hujBrrfdJzUMAANajuIsU3R8Lra9XvBBENwDARVfcRY7u34Tvhx9e
+        wQ/Ci2G6I7oBAMguLO0iR/d3wpw9EaY7ohsAgOzC0i5ydN8T5uzJMN0R3QAAZBeWJrp3T3QDAHBacdvR
+        /Y0wZ6J7xlrvk5qHAACsR3Hb0f2tkP/5S0b0lYjuGWu9T2oeAgCwHsVtR/dLIf9Vj6d3+E+Y7ojuM9Z6
+        n9Q8BABgPYrbju59iO4z1nqf1DwEAGA9ihPduye6AQA4rTjRvXuiGwCA04oT3bsnugEAOK040b17ohsA
+        gNOKWzq6rwnvOdC7Q+7Y0X13mLNfhemO6AYAILuwtKWj+3shw/TSnvLu/SGXAX7M6P51+Hq4a4fnw3RH
+        dAMAkF1Y2tLR/UBofU/FoyF37Ojeh+gGACC7sLSlozt/St36nopHQk50AwDQp+KOGd1vhZ+FB3d4KLwR
+        pnuiGwCAvhV3zOj+d3h/2LX8i5N/C9M90Q0AQN+KO3Z03xx27YbwcpjuiW4AAPpWnOiuEd0AAGQXlia6
+        a0Q3AADZhaWJ7hrRDQBAdmFportGdAMAkF1YmuiuEd0AAGQXlia6a0Q3AADZhaWJ7hrRDQBAdmFportG
+        dAMAkF1YmuiuEd0AAGQXlnbM6H49XB927ergv4EHAGA9ijtmdL8Z7g3f3uG7IQN9uie6AQDoW3HHjO59
+        iW4AAPpWnOiuEd0AAGQXlia6a0Q3AADZhaWJ7hrRDQBAdmFportGdAMAkF1YmuiuEd0AAGQXlia6a0Q3
+        AADZhaWJ7hrRDQBAdmFportGdAMAkF1YmuiuEd0AAGQXlia6a0Q3AADZhaWJ7hrRDQBAdmFportGdAMA
+        kF1Y2ifDZlTu43dh2o9D63sqHg65a8IS0X1ryH04tL5ecSm8K8xa631S8xAAgPXY2PvC9TtkkG5G5T6e
+        DTeE/Lyfnpwd4rGQn/Wh8NLJ2SG+FPLzPrNxtq8Xw01h+vM7y7Wh+T6peQgAwHrE8iexD4SXwz92+FfY
+        jMp9vBWmz3vj5OwQ/w35Wa+E/52cHeK1kJ/3z42zfeWvJ39d0+/3LH8KX2u9T2oeAgCwHrHPhs1Q5Hy8
+        2nqf1DwEAGA9Yh/ZCD/Oz3Ot90nNQwAA1uNkXw4PhV+En/N/9Wj4SfhE631S8xAAAFhO8xAAAFhO8xAA
+        AFhO8xAAAFjK5aveBsaHrAttr3kCAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnTickets.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAt0AAABkCAYAAABabYxmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
+        IgAALiIBquLdkgAABhdJREFUeF7t3c+rrVUdx3ELJEOLECOEDOcVNQkaVNKgiVLSNBJp0LRBTqpRNpKa
+        OJB+4cDIoWIlTizDP0DIhArFoLimZaQlWIbG9fuF88A+m3Xufr57P7uznnVeH3hN1jlrc+9dkzcH7r1X
+        Xb58GQAAOKLmIQAAsJzmIQAA6zHQrgtPhRfCpT39JXwunMta75OahwAArMdAe2/4e8jf1CFuD+ey1vuk
+        5iEAAOsx0DK68yfVmwG9j8+Hc1nrfVLzEACA9Rho29H9Snhihj+E6U4S3QAALGugbUf3L8Oc3RmmO0l0
+        AwCwrIG2Hd35U+w5+2qY7iTRDQDAsgaa6AYAoE8DTXQDANCngSa6AQDo00AT3QAA9GmgiW4AAPo00EQ3
+        AAB9GmiiGwCAPg000Q0AQJ8GmugGAKBPA207uh8Pc3ZHmO4k0Q0AwLIG2nZ0/zZkQH/hCm4L94XpThLd
+        AAAsa6BtR/e+RDcAAMsaaKIbAIA+DTTRDQBAnwaa6AYAoE8DTXQDANCngSa6AQDo00AT3QAA9GmgiW4A
+        APo00EQ3AAB9GmiiGwCAPg000Q0AQJ8GmugGAKBPA010AwDQp4EmugEA6NNAE90AAPRpoIluAAD6NNBE
+        NwAAfSruA+ErB/pieEdYeqIbAIA+FXdL2AzUffw5vDMsPdENAECfivtU2AzUffw+iO7GWu+TmocAAKxH
+        caL7iGu9T2oeAgCwHsVtR/ePwqdn+GOY7ojuM9Z6n9Q8BABgPYrbju67wpw9HaY7ovuMtd4nNQ8BAFiP
+        4raj+5thzp4J0x3RfcZa75OahwAArEdxFym6rw4fPNCNYfY/j9h6n9Q8BABgPYq7SNH90fDagZ4N14ZZ
+        a71Pah4CALAexV2k6P54aH294q/hujBrrfdJzUMAANajuIsU3R8Lra9XvBBENwDARVfcRY7u34Tvhx9e
+        wQ/Ci2G6I7oBAMguLO0iR/d3wpw9EaY7ohsAgOzC0i5ydN8T5uzJMN0R3QAAZBeWJrp3T3QDAHBacdvR
+        /Y0wZ6J7xlrvk5qHAACsR3Hb0f2tkP/5S0b0lYjuGWu9T2oeAgCwHsVtR/dLIf9Vj6d3+E+Y7ojuM9Z6
+        n9Q8BABgPYrbju59iO4z1nqf1DwEAGA9ihPduye6AQA4rTjRvXuiGwCA04oT3bsnugEAOK040b17ohsA
+        gNOKWzq6rwnvOdC7Q+7Y0X13mLNfhemO6AYAILuwtKWj+3shw/TSnvLu/SGXAX7M6P51+Hq4a4fnw3RH
+        dAMAkF1Y2tLR/UBofU/FoyF37Ojeh+gGACC7sLSlozt/St36nopHQk50AwDQp+KOGd1vhZ+FB3d4KLwR
+        pnuiGwCAvhV3zOj+d3h/2LX8i5N/C9M90Q0AQN+KO3Z03xx27YbwcpjuiW4AAPpWnOiuEd0AAGQXlia6
+        a0Q3AADZhaWJ7hrRDQBAdmFportGdAMAkF1YmuiuEd0AAGQXlia6a0Q3AADZhaWJ7hrRDQBAdmFportG
+        dAMAkF1YmuiuEd0AAGQXlnbM6H49XB927ergv4EHAGA9ijtmdL8Z7g3f3uG7IQN9uie6AQDoW3HHjO59
+        iW4AAPpWnOiuEd0AAGQXlia6a0Q3AADZhaWJ7hrRDQBAdmFportGdAMAkF1YmuiuEd0AAGQXlia6a0Q3
+        AADZhaWJ7hrRDQBAdmFportGdAMAkF1YmuiuEd0AAGQXlia6a0Q3AADZhaWJ7hrRDQBAdmFportGdAMA
+        kF1Y2ifDZlTu43dh2o9D63sqHg65a8IS0X1ryH04tL5ecSm8K8xa631S8xAAgPXY2PvC9TtkkG5G5T6e
+        DTeE/Lyfnpwd4rGQn/Wh8NLJ2SG+FPLzPrNxtq8Xw01h+vM7y7Wh+T6peQgAwHrE8iexD4SXwz92+FfY
+        jMp9vBWmz3vj5OwQ/w35Wa+E/52cHeK1kJ/3z42zfeWvJ39d0+/3LH8KX2u9T2oeAgCwHrHPhs1Q5Hy8
+        2nqf1DwEAGA9Yh/ZCD/Oz3Ot90nNQwAA1uNkXw4PhV+En/N/9Wj4SfhE631S8xAAAFhO8xAAAFhO8xAA
+        AFhO8xAAAFjK5aveBsaHrAttr3kCAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
