Added statistics about income/expenses/profits

--- a/ZooBazaar-SAIA-Desktop/Menu.resx
+++ b/ZooBazaar-SAIA-Desktop/Menu.resx
@@ -92,34 +92,69 @@
   </data>
   <data name="btnTickets.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAt0AAABkCAYAAABabYxmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
-        IgAALiIBquLdkgAABhdJREFUeF7t3c+rrVUdx3ELJEOLECOEDOcVNQkaVNKgiVLSNBJp0LRBTqpRNpKa
-        OJB+4cDIoWIlTizDP0DIhArFoLimZaQlWIbG9fuF88A+m3Xufr57P7uznnVeH3hN1jlrc+9dkzcH7r1X
-        Xb58GQAAOKLmIQAAsJzmIQAA6zHQrgtPhRfCpT39JXwunMta75OahwAArMdAe2/4e8jf1CFuD+ey1vuk
-        5iEAAOsx0DK68yfVmwG9j8+Hc1nrfVLzEACA9Rho29H9Snhihj+E6U4S3QAALGugbUf3L8Oc3RmmO0l0
-        AwCwrIG2Hd35U+w5+2qY7iTRDQDAsgaa6AYAoE8DTXQDANCngSa6AQDo00AT3QAA9GmgiW4AAPo00EQ3
-        AAB9GmiiGwCAPg000Q0AQJ8GmugGAKBPA207uh8Pc3ZHmO4k0Q0AwLIG2nZ0/zZkQH/hCm4L94XpThLd
-        AAAsa6BtR/e+RDcAAMsaaKIbAIA+DTTRDQBAnwaa6AYAoE8DTXQDANCngSa6AQDo00AT3QAA9GmgiW4A
-        APo00EQ3AAB9GmiiGwCAPg000Q0AQJ8GmugGAKBPA010AwDQp4EmugEA6NNAE90AAPRpoIluAAD6NNBE
-        NwAAfSruA+ErB/pieEdYeqIbAIA+FXdL2AzUffw5vDMsPdENAECfivtU2AzUffw+iO7GWu+TmocAAKxH
-        caL7iGu9T2oeAgCwHsVtR/ePwqdn+GOY7ojuM9Z6n9Q8BABgPYrbju67wpw9HaY7ovuMtd4nNQ8BAFiP
-        4raj+5thzp4J0x3RfcZa75OahwAArEdxFym6rw4fPNCNYfY/j9h6n9Q8BABgPYq7SNH90fDagZ4N14ZZ
-        a71Pah4CALAexV2k6P54aH294q/hujBrrfdJzUMAANajuIsU3R8Lra9XvBBENwDARVfcRY7u34Tvhx9e
-        wQ/Ci2G6I7oBAMguLO0iR/d3wpw9EaY7ohsAgOzC0i5ydN8T5uzJMN0R3QAAZBeWJrp3T3QDAHBacdvR
-        /Y0wZ6J7xlrvk5qHAACsR3Hb0f2tkP/5S0b0lYjuGWu9T2oeAgCwHsVtR/dLIf9Vj6d3+E+Y7ojuM9Z6
-        n9Q8BABgPYrbju59iO4z1nqf1DwEAGA9ihPduye6AQA4rTjRvXuiGwCA04oT3bsnugEAOK040b17ohsA
-        gNOKWzq6rwnvOdC7Q+7Y0X13mLNfhemO6AYAILuwtKWj+3shw/TSnvLu/SGXAX7M6P51+Hq4a4fnw3RH
-        dAMAkF1Y2tLR/UBofU/FoyF37Ojeh+gGACC7sLSlozt/St36nopHQk50AwDQp+KOGd1vhZ+FB3d4KLwR
-        pnuiGwCAvhV3zOj+d3h/2LX8i5N/C9M90Q0AQN+KO3Z03xx27YbwcpjuiW4AAPpWnOiuEd0AAGQXlia6
-        a0Q3AADZhaWJ7hrRDQBAdmFportGdAMAkF1YmuiuEd0AAGQXlia6a0Q3AADZhaWJ7hrRDQBAdmFportG
-        dAMAkF1YmuiuEd0AAGQXlnbM6H49XB927ergv4EHAGA9ijtmdL8Z7g3f3uG7IQN9uie6AQDoW3HHjO59
-        iW4AAPpWnOiuEd0AAGQXlia6a0Q3AADZhaWJ7hrRDQBAdmFportGdAMAkF1YmuiuEd0AAGQXlia6a0Q3
-        AADZhaWJ7hrRDQBAdmFportGdAMAkF1YmuiuEd0AAGQXlia6a0Q3AADZhaWJ7hrRDQBAdmFportGdAMA
-        kF1Y2ifDZlTu43dh2o9D63sqHg65a8IS0X1ryH04tL5ecSm8K8xa631S8xAAgPXY2PvC9TtkkG5G5T6e
-        DTeE/Lyfnpwd4rGQn/Wh8NLJ2SG+FPLzPrNxtq8Xw01h+vM7y7Wh+T6peQgAwHrE8iexD4SXwz92+FfY
-        jMp9vBWmz3vj5OwQ/w35Wa+E/52cHeK1kJ/3z42zfeWvJ39d0+/3LH8KX2u9T2oeAgCwHrHPhs1Q5Hy8
-        2nqf1DwEAGA9Yh/ZCD/Oz3Ot90nNQwAA1uNkXw4PhV+En/N/9Wj4SfhE631S8xAAAFhO8xAAAFhO8xAA
-        AFhO8xAAAFjK5aveBsaHrAttr3kCAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAt0AAABkCAYAAABabYxmAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAALiIAAC4iAari3ZIAAA4qSURBVHhe7d17sOf1HMfxtLpHkRSmtCRNJSIrUlLknpmS
+        EuU2MYyRmFwiuSQSoyQ0Ui7NbCIp0QWFLqJCEyW5JpVc0oXu5fU6+/usz559nd3f7fv7fX/nPF8zjzm7
+        7/PZs5d5//E+3/18P58V7r//fgAAAAANikUAAAAAwxOLAAAAAIYnFgEAAAAMTywCAAAgI41lN7lItpr6
+        2QQm9UsRiwAAAMjI0LOOHCP+x7VrZDuZuKR+KWIRAAAAGRlqXiBXSRm4izvlCHmirCQlK4ufhB8nX5V5
+        0pqkfiliEQAAABkZSh4kR0o9aCf3yBXyvY4r5V7x544Vhm4AAIDZiAyUFeV5cpmUwbofHsY3llYl9UsR
+        iwAAAMjIQFlVfiH1AN2P++RZ0qqkfiliEQAAABnpK/M7H52dxE+q6yG6H5fLDrK5LJCxJ/VLEYsAAADI
+        SE/xi48Hy03ilyY3k3OkHp4H5T3e18vaMtakfiliEQAAABnpOk+W86UMx3+Xf1c/H6ZDxPvFx5rUL0Us
+        AgAAICPLjU8UOUD+I/VgXNwuh8tz5Y5ObVDby9iT+qWIRQAAAGRkmdlCfiD1QDzdR6Tk/ZLW9MrHD449
+        qV+KWAQAAEBGZsxbpJvtI1fLelIyrD3eJ8h7xAO4zwEfeVK/FLEIAACAjCwVn5f9HakH4OVZKM7Wcqmk
+        Nf3ytpb6tJSRJfVLEYsAAADIyBLZV/yCZD30dusb8t9ptWE4SMaS1C9FLAIAACAjU9lQTpZ62O2Xz+w+
+        VL5f1Qaxv4wlqV+KWAQAAEBGVthbrpN60O3XzbKjOJvILZLW9cJ7xn1hjvOQzseRJPVLEYsAAADI5nAe
+        IV+VesAd1F2yl5S8VoZxW+Wt8nP5q2wjI0nqlyIWAQAAkM3RvEz+JPVgOyz/ko3E8VNvD8xpXT+ukfK1
+        G0/qlyIWAQAAkM2xPEy+IPUg24TvyofET77T5/v1SRlZUr8UsQgAAIBsDuWF4v3R9RA7Cj7R5NRptX6d
+        LiNL6pciFgEAAJDNgawlR0k9vI6Kz+xeIM4pktb04j75lGwru8vDpbGkfiliEQAAANksz07ya6kH11E6
+        S0oeJX+WtK5fb5DGkvqliEUAAABkszRryMflXqmH1HE4QEoOk7SmH1fI2tJYUr8UsQgAAIBsFsZbL3y8
+        Xj2gjpOvcd9B/E3AMG+s9D7xRpP6pYhFAAAAZLMoq4hPDLlT6uG0Deon7r5Ax8cK1p/vh6+r31QaS+qX
+        IhYBAACQzZJsLRdKPZS2jV+CPFd8u+RLOrVB+SbNo+WbsqcMNalfilgEAABANuGZJ++RYW7baMrd4q0v
+        JcdKWtevfWSoSf1SxCIAAACyCc6Wco7Ug2fbXSKribO6XCtpXS98zfxuMvSkfiliEQAAANmEZj+5Rerh
+        c1IcIuvIZ2UYT+gbu6Uy9UsRiwAAAMgmLI+XM6QeOifNHfKnabV+/VMauyAn9UsRiwAAAMgmKL4IZhin
+        frSFTzQ5W7aXyzu1Xp0kjSX1SxGLAAAAyCYgG8kwrlBvm/OkxOd4e292Wrcs75LGkvqliEUAAABkLY9P
+        5LhB6kFztvClOb6mvuQDktYty77SWFK/FLEIAACArKV5lCyUesCcjX4vPsXEL1Z+pVPrRX3F/NCT+qWI
+        RQAAAGQtzMvlGqmHy9nsTLlyWq1b/saksaR+KWIRAAAAWYuyrhwn9VA51/jFyKOm1ZbFV8GvJ40k9UsR
+        iwAAAMhakl3kd1IPlHPNgeKsKBdLWpOUXzf0pH4pYhEAAADZmLO2HC31EDlXfV5KNhc/xU7raifIfGkk
+        qV+KWAQAAEA2xuwsV0g9RM51e4izvlwmaY1dJ6+SRpP6pYhFAAAAZGPImvIJuU/qQRKLXiB9q1xb1aY7
+        WTaUxpP6pYhFAAAAZCOOb1/8pdRDJGbmk03KLZzebvI6GVlSvxSxCAAAgGxEWVU+LHdLGSgxs3/Iq8XZ
+        X86QR079bIRJ/VLEIgAAALIRZIH8VOqhEst2vWwgdXx++blyrHgLyo7ibSYPlEaS+qWIRQAAAGQNZiV5
+        r9wu9UCJ7nxEHL9UOdNtlbfJr+QU8f8keDDfTIaS1C9FLAIAACBrKFvKj6QeENEdf5PyDvET7N3kz5LW
+        zeQnUvJC8VNx76X3k/N50nVSvxSxCAAAgKyBPF/+I/UgiO5cIH5SvZr43O60Znm+JWuI4x+X+s3ip+I+
+        /eRg8UDv38unycSkfiliEQAAAFkD2Vg84JVhD8t3lxwkjvdqXy1pXTfuFD8d/74s74Kde+QYiUn9UsQi
+        AAAAsobyRamHO8zsEnmSeDvJEZ3aKB0vMalfilgEAABA1lBeKfVgh6XdKx8V5+nirR9pXS/+K34B80vS
+        7W2f35CY1C9FLAIAACBrKDtIPdhhSZeLB+0HyKHiATyt69VvpWRfSWumu0risYOpX4pYBAAAQNZQdpJ6
+        sMP/eQuJh9ytxFtL0pp+nS4ln5W0Zjpfx+9vkpZK6pciFgEAAJA1lDdIPdhh0VPoZ4vjlyb98mRaN4hy
+        trfTy5GN58hSSf1SxCIAAACyhlIfVYdFx//5Knwf0Xdhp9aEP8pC8ZGAyzu5ZLoPyRJJ/VLEIgAAALIG
+        soVwC+UiPrrPF9Q4vvDGLzqmdW1xmPiM8KmkfiliEQAAANmQ473K50o9yM1VX5YHyWPF2zfSmmG6Vc6S
+        38kgw/0vxduD5qd+KWIRAAAA2RCzrpwo9QA3F/1VfNuj8ybxMJzWDZu3rTiryJGS1vTigtQvRSwCAAAg
+        G2J2F3/BGzsf56KvyUNlA/lupzYqvpCo5OuS1nTjJnmnPCX1SxGLAAAAyIYYP2HdVDx07iW3ST3MzWZ+
+        aXFvcV4j/5K0rkmvl5IrJa3pxuKvk/qliEUAAABkDWauXAV/mqwv3l5zcqc2Dt+U18muMsiWFn/jNJXU
+        L0UsAgAAIGswR0k9zM023obhFw6dPeQGSesmzQdkKqlfilgEAABA1lCeIG0/Hm8QZ8uGspb4XOy0ZpTu
+        kL9Nqw3iMxL7pYhFAAAAZA1lY/Fgerz4CLp6oJtk3qe+nzi7yF8krRu1b8s6srUMemSjT1/xFfKxX4pY
+        BAAAQDaCrC4/lHqwm0TnySbiv8+xnVpbHCIlgwzdp4hfhJ1K6pciFgEAAJCNKK+VeribJN668W5xdhZf
+        PpPWjdOLxVlT+t1bfp9sJYuT+qWIRQAAAGQjyAPkU1IPeJPiZ+L96SvLpzu1NvKWl8fLM+XeTq0f28ni
+        pH4pYhEAAADZCDJf7pF6uGs7/3k/KI4H0UHOvR6Vu2TQ88Evli1lKqlfilgEAABANoLMk1fJ88VPZG+W
+        etBrG7/4uUBWlMPE2y7SutnqIplK6pciFgEAAJCNIW+Veshrk8PFw7ZPAbmsU2u7E8V7zQ+Qazu1fvxb
+        DpSnyVRSvxSxCAAAgGwM2VbqYa8NvH1ke3F8OYy3aqR1bfQmKblc0ppu+Pr6JZL6pYhFAAAAZCPOSvJl
+        qYe9cTta/OfaQn7aqU2SZ4jzaOn3QiK/fPk4WSKpX4pYBAAAQDbirCG/kN/LMG9Q7Mcf5Hni+EjA2yWt
+        azMfZ/hkcXaQtKZb5VjExUn9UsQiAAAAsjHENyeuJuuJL2OpB79ROU78DYBvzvxRpzaJ/JKnTyy5VPzN
+        TFrTi0/K4qR+KWIRAAAA2Zizqdwt9eDXJF/b/lJx/ELnrZLWzUU3yudkcVK/FLEIAACAbMzxmdCjGroX
+        ytqyoZzVqU06/0/Bx8R/n0G2x5wsD5MlkvqliEUAAABkY4yP5vu21MNfE7x3/BXi7Cs3SVo3icr176tL
+        v3vk/RLl4gtx6qR+KWIRAAAA2Rjj6+HfJUfJZ6SJrR5+Euy94+vLtzq12cL/Q7CZOH6Zst9LfPzrtpGl
+        kvqliEUAAABkLYr3Wg/runi/XPhGcfaWv0taN8m8P30VcXaXtKZb50sZ4Bcn9UsRiwAAAMhalAeKB8l6
+        GOzHmeIXNP0k/ZhObTbyHu5z5EgZxh71C2SJpH4pYhEAAABZi+Lrx++UehDsZcvELbK/lPjCGx8J6Jsm
+        /dTbl+D8UDzYex9z+hpzka9/f58stcUk9UsRiwAAAMhalBPEQ7dvrNxDvE/Zt0T6ApsPym+kHhZr50p8
+        GTDkwbK57Cq+8t0nd/xKPLSnr91WF3X4qL9+93PbPhKT+qWIRQAAAGQtyiayrMHZl9kcJPURg772/ECZ
+        J4PEv34D8VPxN4u3pZwn10lbn4ovEGdruUvSmuXxHvr5EpP6pYhFAAAAZBMYPwX3H/xn8lQXGsxa8gTx
+        73mI+ASUK+U2KYPrONwsjxDnOZLWdOttEpP6pYhFAAAAZBOaHWXNRT8ceVaWjWQn2U++KBfK9TLINo9e
+        XCIlb5e0pheHylJJ/VLEIgAAADIytPi2yyfJXuJbIk+Xq2SQmyJnco345UdfjnNap9arq+XsDp+AslRS
+        vxSxCAAAgIw0Gp+j/RjZWd4hXxJvi/HLj/UAPEonyXayqiwzqV+KWAQAAEBGxpJ15Snii3s+IWfIH+QO
+        qQfkmdwgfok0fW4mfuL+Guk6qV+KWAQAAEBGWhM/efa54i+Sd4qPULxY/iH18GxbiU8d8UuQ0z+XeK/5
+        ntJTUr8UsQgAAICMtD7riS8O8lPqI2ShrCaOn5TXw/VMjpeek/qliEUAAABkZKLj4wx9TrkH8UvlJqmH
+        bfM5474Wv+ekfiliEQAAABmZVVlfni6vF59I8mM5VfpK6pciFgEAAJCRWZ+VOh97TuqXIhYBAACQETJT
+        Ur8UsQgAAICMkJmS+qWIRQAAAGSEzJTUL0UsAgAAICNkpqR+KWIRAAAAGSEzJfXLIvev8D82pUcagS53
+        NAAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
